<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/title"
        android:textStyle="bold"
        android:textSize="@dimen/abc_text_size_headline_material"
        android:paddingBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/project1"
        android:text="@string/project1"
        android:background="@color/orange_500"
        android:layout_marginBottom="10dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/project2"
        android:text="@string/project2"
        android:background="@color/orange_500"
        android:layout_marginBottom="10dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/project3"
        android:text="@string/project3"
        android:background="@color/orange_500"
        android:layout_marginBottom="10dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/project4"
        android:text="@string/project4"
        android:background="@color/orange_500"
        android:layout_marginBottom="10dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/project5"
        android:text="@string/project5"
        android:background="@color/orange_500"
        android:layout_marginBottom="10dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/final_project"
        android:text="@string/final_project"
        android:background="@color/red_500"
        android:textColor="@android:color/white"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />

</LinearLayout>
